# stm32h750-drivers

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  memory.x  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DISPLAY_DRIVER.md  HARDWARE_CONNECTION.md
docs/develop/: HARDWARE_CONNECTION.md
docs/issues/: STM32H750_DELAY_AND_I2C_ISSUES.md
docs/learning/: CHARACTER_ENCODING_ISSUE.md  FRAME_BUFFER_GUIDE.md  SIZE_CHECK.md  STRUCTURE.md  WHY_SO_MANY_ABSTRACT.md
docs/plans/: 2025-02-19-rfid-rc522-design.md  2025-02-19-rfid-rc522.md  2026-02-22-hardware-spi-dma-design.md  2026-02-22-hardware-spi-dma.md  2026-02-23-slint-gui-design.md  2026-03-01-ntc-temperature-sensor-design.md  2026-03-01-ntc-temperature-sensor-implementation.md  2026-03-01-pixel-ui-design.md  2026-03-01-pixel-ui.md
docs/troubleshootings/: RC522_SPI_NOTES.md  STM32H750_DELAY_AND_I2C_ISSUES.md
examples/: adc.rs  sensors_AHT20.rs  temperature.rs
lvgl-config/: lv_conf.h
src/: adc_ntc.rs  cli.rs  dht11.rs  display.rs  main.rs  profiler.rs  rc522.rs  serial.rs  types.rs  ui.rs
src/drivers/: adc_ntc.rs  aht20.rs  bmp280.rs  dht11.rs  display.rs  mod.rs  rc522.rs  serial.rs
src/ui/: bounding_box.rs  icons.rs  mod.rs  screen.rs  sensor.rs  theme.rs  widgets.rs
src/ui/widgets/: button.rs  card.rs  history.rs  label.rs  mod.rs  pressure_card.rs  progress.rs
