[package]
name = "rfid-stm32h750"
version = "0.1.0"
edition = "2021"

[dependencies]
stm32h7xx-hal = { version = "0.16", features = ["stm32h750v", "rt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-graphics = "0.7"
embedded-hal = "0.2"
panic-halt = "1.0"
nb = "1.0"

[profile.dev]
opt-level = 1
debug = 2          # 完整调试信息
strip = false      # 保留调试符号
lto = false        # 禁用 LTO 保留调试信息
codegen-units = 1

[profile.release]
debug = 2          # 完整调试信息用于 GDB
strip = false      # 保留调试符号
opt-level = 1
lto = false        # 禁用 LTO 保留调试信息
codegen-units = 1
