[package]
name = "stm32h750-drivers"
version = "0.1.0"
edition = "2021"
authors = ["Liz2Z <fitz-i@foxmail.com>"]
description = "A collection of Rust-based drivers for STM32H750, including display (ILI9341), sensors (AHT20, BMP280, DHT11), and UI components"
license = "MIT"
repository = "https://github.com/yourusername/stm32h750-drivers"
readme = "README.md"
keywords = ["stm32", "stm32h750", "display", "ili9341", "embedded", "drivers", "sensors"]
categories = ["embedded", "hardware-support", "no-std"]
exclude = [".vscode", ".claude", "docs/*.pdf"]

[dependencies]
stm32h7xx-hal = { version = "0.16", features = ["stm32h750v", "rt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-graphics = "0.8"
embedded-hal = "0.2"
panic-halt = "1.0"
nb = "1.0"
heapless = "0.7"
micromath = "1.1"

[features]
default = []
profiler = []

[profile.dev]
opt-level = 1
debug = 2          # 完整调试信息
strip = false      # 保留调试符号
lto = false        # 禁用 LTO 保留调试信息
codegen-units = 1

[profile.release]
debug = 2          # 完整调试信息用于 GDB
strip = false      # 保留调试符号
opt-level = 1
lto = false        # 禁用 LTO 保留调试信息
codegen-units = 1
